--- a/proxy/config/conf.d/server.conf
+++ b/proxy/config/conf.d/server.conf
@@ -1,5 +1,14 @@
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
+# upstreamでサーバー群をまとめることができる
+# 各サーバーへの重み付けもできる
+# upstream sample_server_com {
+#       server 127.0.0.3:8000 weight=5;
+#       server 127.0.0.3:8001 weight=5;
+#       server 192.168.0.1:8000;
+#       server 192.168.0.1:8001;
+# }
+
 # HTTPをHTTPSに強制リダイレクト
 # server {
 #   listen 8080;
@@ -18,6 +27,7 @@ server {
      }
 
     location / {
+        # サーバー郡を指定する場合は、ここをupstreamディレクティブの値に変更
         proxy_pass https://qiita.com:443/;
      }
 
